--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
   <!-- NOTE: To run this app on Ionic DevApp, a reference to cordova.js is needed. 
-          Normally, this is automatically added upon executing 'ionic cordova build' commands. -->
+       Normally, this is automatically added upon executing 'ionic cordova build' commands. 
   <script src="cordova.js"></script>
+  -->
 </head>
 
 <body>
